Resolves: tdf#117784 inherit SfxTabDialogController from SfxDialogController

Change-Id: I6b7ce81093ec402954aa5a2f4b266827fe85a88f
Reviewed-on: https://gerrit.libreoffice.org/61314
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/61327
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>